# LearningQt

./: README.md
01 - First Steps/HelloWorld/: CMakeLists.txt
02 - Variables and Constants/ArithmeticOperators/: CMakeLists.txt
02 - Variables and Constants/Arrays/: CMakeLists.txt
02 - Variables and Constants/Enums/: main.cpp
02 - Variables and Constants/Structs/: CMakeLists.txt
03 - Input Output/Cout/: CMakeLists.txt  main.cpp
03 - Input Output/QDebug/: CMakeLists.txt
03 - Input Output/cerr/: CMakeLists.txt
04 - Flow Control/DoLoops/: CMakeLists.txt
04 - Flow Control/ExampleAgeCalculator/: CMakeLists.txt  main.cpp
04 - Flow Control/IfElseStatement/: main.cpp
04 - Flow Control/IfStatement/: CMakeLists.txt
04 - Flow Control/SwitchStatement/: CMakeLists.txt  main.cpp
04 - Flow Control/Ternary/: CMakeLists.txt  main.cpp
05 - Functions/Assignment7/: main.cpp
05 - Functions/ByRefByVal/: CMakeLists.txt  main.cpp
05 - Functions/FunctionsInStructs/: CMakeLists.txt  main.cpp
05 - Functions/Overloading/: main.cpp
05 - Functions/ReturningVals/: main.cpp
06 - Classes/Assignment8/: CMakeLists.txt  cat.h  main.cpp
06 - Classes/ClassesIntro/: animal.h
06 - Classes/ConstructorsDeconstructors/: laptop.cpp
06 - Classes/Inheritance/: animal.cpp  feline.h  mammal.cpp  mammal.h  monster.cpp
06 - Classes/Interfaces/: CMakeLists.txt  appliance.cpp  appliance.h  freezer.h  main.cpp  microwave.h  toaster.h
06 - Classes/Overriding/: CMakeLists.txt  feline.cpp  lion.cpp  main.cpp
06 - Classes/QObjectClass/: CMakeLists.txt  main.cpp
07 - Scope/Assignment9/: CMakeLists.txt  main.cpp
07 - Scope/ClassScope/: animal.cpp
07 - Scope/GlobalScope/: main.cpp
07 - Scope/StaticFunctionsInClasses/: CMakeLists.txt  main.cpp  test.cpp
07 - Scope/StaticScopeClasses/: CMakeLists.txt  animal.cpp
08 - Pointers/Assignment10/: calc.h
08 - Pointers/AutomaticMemoryManagement/: CMakeLists.txt  main.cpp  test.h
08 - Pointers/PointerMemoryManagement/: CMakeLists.txt
08 - Pointers/PointersVsCopies/: CMakeLists.txt
08 - Pointers/QObjectParentChildRelationships/: animal.cpp  animal.h  test.cpp  test.h
09 - Signals and Slots/Assignment11/: main.cpp  test.h
09 - Signals and Slots/Connecting/: destination.h  main.cpp
09 - Signals and Slots/Disconnecting/: main.cpp  radio.cpp
09 - Signals and Slots/DogExample/: owner.cpp
09 - Signals and Slots/Q_Property/: CMakeLists.txt  test.cpp  watcher.cpp  watcher.h
09 - Signals and Slots/TimerExample/: CMakeLists.txt  test.h
1 - First Steps/build-HelloWorld-Desktop_Qt_6_5_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  HelloWorld  build.ninja  cmake_install.cmake  qtcsettings.cmake
10 - Casting/Assignment12/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
10 - Casting/DynamicCasting/: CMakeLists.txt  car.cpp  feline.cpp  main.cpp  racecar.h
10 - Casting/ExplicitCasting/: CMakeLists.txt  main.cpp
10 - Casting/ImplicitCasting/: CMakeLists.txt  main.cpp
10 - Casting/QObjectCast/: CMakeLists.txt  main.cpp
10 - Casting/ReinterpretCasting/: CMakeLists.txt  main.cpp
10 - Casting/StaticCasting/: CMakeLists.txt  main.cpp  racecar.cpp
11 - Exception Handling/CustomHandling/: CMakeLists.txt
11 - Exception Handling/ErrorsVsExceptions/: CMakeLists.txt  main.cpp
11 - Exception Handling/Throwing/: CMakeLists.txt  main.cpp
11 - Exception Handling/TryCatch/: CMakeLists.txt  main.cpp
12 - Templates/TemplateClasses/: CMakeLists.txt  main.cpp  test.h
12 - Templates/TemplateIssues/: CMakeLists.txt  main.cpp
12 - Templates/TemplatesAndQObject/: CMakeLists.txt  main.cpp
12 - Templates/TemplatesExample/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QByteArray/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QDateTime/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QList/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
13 - Basic Qt Classes/QObject/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
13 - Basic Qt Classes/QString/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QStringList/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QVariant/: CMakeLists.txt  main.cpp
13 - Basic Qt Classes/QVector/: CMakeLists.txt  main.cpp
2 - Variables and Constants/Arrays/: main.cpp
2 - Variables and Constants/Enums/: CMakeLists.txt
2 - Variables and Constants/Structs/: main.cpp
2 - Variables and Constants/build-ArithmeticOperators-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
2 - Variables and Constants/build-Arrays-Desktop-Debug/: Arrays  CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
2 - Variables and Constants/build-Enums-Desktop-Debug/: CMakeCache.txt  Enums  Makefile  cmake_install.cmake  qtcsettings.cmake
2 - Variables and Constants/build-Structs-Desktop-Debug/: CMakeCache.txt  Makefile  Structs  cmake_install.cmake  qtcsettings.cmake
5 - Functions/Assignment7/: CMakeLists.txt
6 - Classes/ClassesIntro/: CMakeLists.txt  animal.cpp  main.cpp
6 - Classes/Inheritance/: CMakeLists.txt  canine.cpp  canine.h  feline.cpp  main.cpp  monster.h
7 - Scope/ClassScope/: CMakeLists.txt  animal.h  main.cpp
9 - Signals and Slots/DogExample/: CMakeLists.txt  main.cpp
99 - Misc/QtSerial/1 - BasicReceive/BasicReceive-C++/: CMakeLists.txt  main.cpp
99 - Misc/QtSerial/2 - BasicSend/BasicSend-C++/BasicSend/: CMakeLists.txt  main.cpp
99 - Misc/QtSerial/3 - TwoWayClass/C++/TwoWayClass/: CMakeLists.txt  driver.cpp  driver.h  main.cpp
build-cerr-Desktop-Debug/: cerr  cmake_install.cmake  qtcsettings.cmake
build-cin-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
cerr/: main.cpp
cin/: CMakeLists.txt  main.cpp
(+584 files in other folders)
